# quirky_binder

./: Cargo.toml  README.md  justfile
capnp/quirky_binder_capnp/: Cargo.toml  build.rs
capnp/quirky_binder_capnp/schema/: quirky_binder.capnp
capnp/quirky_binder_capnp/src/: lib.rs  state.rs
codegen/quirky_binder_codegen/: Cargo.toml
codegen/quirky_binder_codegen/src/: gen.rs  lib.rs
codegen/quirky_binder_codegen_macro/: Cargo.toml
codegen/quirky_binder_codegen_macro/src/: decorators.rs  lib.rs
codegen/quirky_binder_codegen_wasm/: Cargo.toml
codegen/quirky_binder_codegen_wasm/src/: lib.rs
codegen/quirky_binder_codegen_wasm/www/: index.html  index.jsx  package-lock.json  package.json  test.qb  webpack.config.js
contrib/quirky_binder_csv/: Cargo.toml  README.md
contrib/quirky_binder_csv/src/: lib.rs  read.rs  write.rs
contrib/quirky_binder_git2/: Cargo.toml
contrib/quirky_binder_git2/src/: lib.rs  walk_commits.rs
datapet/: Cargo.toml
datapet/src/: chain.rs  drawing.rs  graph.rs  lib.rs  params.rs  prelude.rs  stream.rs  support.rs
datapet/src/chain/: error.rs  mod.rs
datapet/src/drawing/: graph.rs  mod.rs
datapet/src/filter/: accumulate.rs  anchor.rs  debug.rs  dedup.rs  group.rs  in_place.rs  mod.rs  monitor.rs  sink.rs  sort.rs  unwrap.rs
datapet/src/filter/fork/: extract_fields.rs  join.rs  mod.rs
datapet/src/filter/function/: execute.rs  mod.rs  produce.rs  terminate.rs  update.rs
datapet/src/filter/source/: function.rs
datapet/src/filter/transform/: mod.rs  string.rs
datapet/src/graph/: error.rs  mod.rs
datapet/src/graph/builder/: mod.rs  params.rs  pass_through.rs  update.rs
datapet/src/support/: cmp.rs  eq.rs  mod.rs  name.rs  valid.rs
datapet_codegen/: Cargo.toml
datapet_codegen/src/: chain.rs  gen.rs  graph.rs  lib.rs  stream.rs  support.rs
datapet_codegen/src/filter/: anchor.rs  dedup.rs  group.rs  in_place.rs  sink.rs  sort.rs
datapet_codegen/src/filter/fork/: extract_fields.rs
datapet_codegen_macro/: Cargo.toml
datapet_codegen_macro/src/: decorators.rs  lib.rs
datapet_codegen_wasm/: Cargo.toml
datapet_codegen_wasm/src/: lib.rs
datapet_codegen_wasm/www/: bootstrap.js  index.html  index.jsx  package-lock.json  package.json  test.dtpt  webpack.config.js
datapet_lang/: Cargo.toml
datapet_lang/src/: ast.rs  lib.rs  location.rs  parser.rs  snippet.rs
datapet_lang/src/parser/: fuzz_tests.rs  fuzzer.rs  mod.rs  nom_impl.rs
datapet_lang/src/parser/crafted_impl/: lexer.rs  mod.rs
datapet_support/: Cargo.toml
datapet_support/src/: lib.rs
datapet_support/src/chain/: configuration.rs
datapet_support/src/data/: buffer.rs
datapet_support/src/iterator/: accumulate.rs  dedup.rs  group.rs  mod.rs  sort.rs
datapet_support/src/iterator/io/: buf.rs
examples/datapet_example_index_first_char/: Cargo.toml  build.rs
examples/datapet_example_index_first_char/src/: chain.rs  main.rs
examples/datapet_example_sub_sort_sub_group/: Cargo.toml  build.rs
examples/datapet_example_sub_sort_sub_group/src/: main.rs
examples/datapet_example_tree/: Cargo.toml  build.rs
examples/datapet_example_tree/src/: main.rs
examples/datapet_example_wordlist/: Cargo.toml  build.rs
examples/datapet_example_wordlist/src/: main.rs
examples/quirky_binder_example_index_first_char/: Cargo.toml  build.rs
examples/quirky_binder_example_index_first_char/src/: chain.rs  main.rs
quirky_binder/: Cargo.toml
quirky_binder/src/: codegen.rs  lib.rs  params.rs  prelude.rs  stream.rs
quirky_binder/src/chain/: customizer.rs  error.rs  mod.rs  result.rs  trace.rs  type_rewriter.rs
quirky_binder/src/drawing/: graph.rs  mod.rs
quirky_binder/src/drawing/graph/: helper.rs  mod.rs  record.rs  stream.rs
quirky_binder/src/filter/: accumulate.rs  anchor.rs  debug.rs  dedup.rs  group.rs  mod.rs  monitor.rs  pipe.rs  sort.rs  ungroup.rs  unwrap.rs
quirky_binder/src/filter/fork/: extract_fields.rs  join.rs
quirky_binder/src/filter/function/: emit.rs  execute.rs  mod.rs  produce.rs  terminate.rs  update.rs
quirky_binder/src/filter/transform/: mod.rs  string.rs
quirky_binder/src/graph/: error.rs  mod.rs  node.rs  tests.rs  visit.rs
quirky_binder/src/graph/builder/: mod.rs  params.rs  pass_through.rs  update.rs
quirky_binder/src/record_definition/: builder.rs  mod.rs
quirky_binder/src/support/: cmp.rs  eq.rs  name.rs
quirky_binder_lang/: Cargo.toml
quirky_binder_lang/src/: ast.rs  lib.rs  location.rs
quirky_binder_lang/src/parser/: fuzz_tests.rs  mod.rs  nom_impl.rs
quirky_binder_lang/src/parser/crafted_impl/: lexer.rs  mod.rs
quirky_binder_support/: Cargo.toml
quirky_binder_support/src/: input.rs  lib.rs  output.rs  prelude.rs  status.rs
quirky_binder_support/src/data/: buffer.rs
quirky_binder_support/src/iterator/: accumulate.rs  collections.rs  dedup.rs  group.rs  inspect.rs  mod.rs  sort.rs  try_fallible.rs
quirky_binder_support/src/management/: state.rs
recipes/: .gitignore  Cargo.toml  (+1 more)
tests/datapet_tests/: Cargo.toml  build.rs
tests/datapet_tests_source/: Cargo.toml
tests/datapet_tests_source/dtpt_tests/: extract_fields.dtpt  hello_world.dtpt  sub_unwrap_1.dtpt  sub_unwrap_2.dtpt  unwrap.dtpt
tests/datapet_tests_source/src/: lib.rs
tests/quirky_binder_tests/: .gitignore  Cargo.toml  build.rs
tests/quirky_binder_tests/input/: hello_universe.csv
tests/quirky_binder_tests/quirky_binder_src/: extract_fields.edges.snap  extract_fields.nodes.snap  extract_fields.qb  hello_world.edges.snap  hello_world.qb  multiple_graphs.edges.snap  multiple_graphs.nodes.snap  multiple_graphs.qb  pipe.edges.snap  pipe.qb
tests/quirky_binder_tests/src/: lib.rs
tests/quirky_binder_tests_csv/: Cargo.toml  build.rs
tests/quirky_binder_tests_csv/src/: lib.rs
tests/quirky_binder_tests_git2/: Cargo.toml
tests/quirky_binder_tests_git2/src/: lib.rs
tests/quirky_binder_tests_source/: Cargo.toml  build.rs
tests/quirky_binder_tests_source/quirky_binder_tests/: extract_fields.qb  hello_world.qb  multiple_graphs.qb  sub_unwrap_1.qb  sub_unwrap_2.qb  unwrap.qb
tests/quirky_binder_tests_source/src/: lib.rs
(+157 files in other folders)
