[workspace]
resolver = "2"
members = [
    "quirky_binder",
    "quirky_binder_lang",
    "quirky_binder_support",
    "codegen/quirky_binder_codegen",
    "codegen/quirky_binder_codegen_macro",
    "contrib/quirky_binder_csv",
    "tests/quirky_binder_tests",
    "tests/quirky_binder_tests_source",
    "examples/quirky_binder_example_index_first_char",
    "examples/quirky_binder_example_tree",
    "examples/quirky_binder_example_wordlist",
]
exclude = [
    "codegen/quirky_binder_codegen_wasm",
]
