[package]
name = "datapet"
version = "0.1.0"
edition = "2021"
rust-version = "1.56.1"

[dependencies]
codegen = "0.1"
datapet_codegen = { path = "../datapet_codegen" }
datapet_support = { path = "../datapet_support" }
derive_more = "0.99"
derive-new = "0.5"
getset = "0.1"
itertools = "0.10"
proc-macro2 = "1"
quote = "1"
syn = "1"
truc = { git = "https://github.com/arnodb/truc.git" }
which = "4"
