[package]
name = "datapet_codegen_macro"
version = "0.1.0"
edition = "2021"
rust-version = "1.65.0"

[lib]
proc-macro = true

[dependencies]
annotate-snippets = { version = "0.9", features = ["color"] }
datapet_codegen = { path = "../datapet_codegen" }
proc-macro2 = "1"
proc-macro-error = "1"
quote = "1"
syn = { version = "1", features = ["full"] }

