[package]
name = "datapet_support"
version = "0.1.0"
edition = "2021"
rust-version = "1.65.0"

[dependencies]
binary-heap-plus = "0.5"
bincode = "1"
compare = "0.1"
derive_more = "0.99"
derive-new = "0.5"
fallible-iterator = "0.2"
lazy_static = "1"
serde = { version = "1", features = ["derive"] }
tempfile = "3"
thiserror = "1"

[dev-dependencies]
assert_matches = "1"
rand = "0.8"
rand_chacha = { version = "0.3" }
rstest = "0.18.2"
