[package]
name = "quirky_binder"
version = "0.1.1-dev"
edition = "2021"
rust-version = "1.85.0"
license-file = "../LICENSE"
description = "Quirky Binder"
documentation = "https://docs.rs/quirky_binder"
repository = "https://github.com/arnodb/quirky_binder"
readme = "../README.md"

[dependencies]
codegen = "0.2"
derive-new = "0.5"
derive_more = "0.99"
getset = "0.1"
handlebars = "4"
itertools = "0.10"
proc-macro2 = "1"
quirky_binder_codegen_macro = { version = "0.1.1-dev", path = "../codegen/quirky_binder_codegen_macro" }
quirky_binder_lang = { version = "0.1.1-dev", path = "../quirky_binder_lang" }
quirky_binder_support = { version = "0.1.1-dev", path = "../quirky_binder_support" }
quote = "1"
ron = "0.11"
serde = { version = ">=1,<=1.0.219", features = ["derive"] }
syn = { version = "1", features = ["full", "extra-traits"] }
thiserror = "1"
truc = "0.4"
which = "4"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }
