[package]
name = "quirky_binder_lang"
version = "0.1.1-dev"
edition = "2021"
rust-version = "1.65.0"
license-file = "../LICENSE"
description = "Quirky Binder Language"
documentation = "https://docs.rs/quirky_binder_lang"
repository = "https://github.com/arnodb/quirky_binder"
readme = "../README.md"

[features]
default = ["crafted_parser"]

crafted_parser = ["logos", "peekmore"]
nom_parser = ["nom"]

#full_fuzz_tests = ["nom_parser", "crafted_parser"]

[dependencies]
annotate-snippets = { version = "0.9", features = ["color"] }
derive-new = "0.5"
logos = { version = "0.13", optional = true }
nom = { version = "7", optional = true }
peekmore = { version = "1", optional = true }
ron = "0.9.0-alpha.0"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
antinom = { git = "https://github.com/arnodb/antinom.git" }
assert_matches = "1"
rand_chacha = { version = "0.3" }
rstest = "0.18.2"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }
