[package]
name = "quirky_binder_support"
version = "0.1.0"
edition = "2021"
rust-version = "1.65.0"
license-file = "../LICENSE"
description = "Quirky Binder Support"
documentation = "https://docs.rs/quirky_binder_support"
repository = "https://github.com/arnodb/quirky_binder"
readme = "../README.md"

[dependencies]
binary-heap-plus = "0.5"
bincode = "1"
compare = "0.1"
derive-new = "0.5"
derive_more = "0.99"
fallible-iterator = "0.2"
lazy_static = "1"
quirky_binder_codegen_macro = { version = "0.1.0", path = "../codegen/quirky_binder_codegen_macro" }
serde = { version = "1", features = ["derive"] }
tempfile = "3"
thiserror = "1"

[dev-dependencies]
assert_matches = "1"
rand = "0.8"
rand_chacha = { version = "0.3" }
rstest = "0.18.2"
