[package]
name = "quirky_binder_codegen"
version = "0.1.1-dev"
edition = "2021"
rust-version = "1.85.0"
license-file = "../../LICENSE"
description = "Quirky Binder Codegen"
documentation = "https://docs.rs/quirky_binder_codegen"
repository = "https://github.com/arnodb/quirky_binder"
readme = "../../README.md"

[dependencies]
annotate-snippets = { version = "0.9", features = ["color"] }
glob = "0.3"
Inflector = "0.11"
itertools = "0.13"
proc-macro2 = "1"
quirky_binder_lang = { version = "0.1.1-dev", path = "../../quirky_binder_lang" }
quote = "1"
syn = { version = "2", features = ["full"] }
