[package]
name = "quirky_binder_codegen_macro"
version = "0.1.1-dev"
edition = "2021"
rust-version = "1.82.0"
license-file = "../../LICENSE"
description = "Quirky Binder Codegen Macro"
documentation = "https://docs.rs/quirky_binder_codegen_macro"
repository = "https://github.com/arnodb/quirky_binder"
readme = "../../README.md"

[lib]
proc-macro = true

[dependencies]
annotate-snippets = { version = "0.9", features = ["color"] }
proc-macro-error = "1"
proc-macro2 = "1"
quirky_binder_codegen = { version = "0.1.1-dev", path = "../quirky_binder_codegen" }
quirky_binder_lang = { version = "0.1.1-dev", path = "../../quirky_binder_lang" }
quote = "1"
syn = { version = "1", features = ["full"] }
