[package]
name = "quirky_binder_csv"
version = "0.1.1-dev"
edition = "2021"
rust-version = "1.65.0"
license-file = "../LICENSE"
description = "Quirky Binder - CSV"
documentation = "https://docs.rs/quirky_binder_csv"
repository = "https://github.com/arnodb/quirky_binder"
readme = "README.md"

[dependencies]
getset = "0.1"
quirky_binder = { version = "0.1.1-dev", path = "../../quirky_binder" }
quote = "1"
serde = { version = "1", features = ["derive"] }
truc = { git = "https://github.com/arnodb/truc.git" }
