[package]
name = "quirky_binder_git2"
version = "0.1.1-dev"
edition = "2021"
rust-version = "1.88.0"
license-file = "../../LICENSE"
description = "Quirky Binder - Git2"
documentation = "https://docs.rs/quirky_binder_git2"
repository = "https://github.com/arnodb/quirky_binder"
readme = "README.md"

[dependencies]
getset = "0.1"
quirky_binder = { version = "0.1.1-dev", path = "../../quirky_binder" }
quote = "1"
serde = { version = "1", features = ["derive"] }
truc = "0.4"
