[package]
name = "datapet_example_index_first_char"
version = "0.1.0"
edition = "2021"
rust-version = "1.56.1"

[dependencies]
datapet_support = { path = "../../datapet_support" }
fallible-iterator = "0.2"
itertools = "0.10"
static_assertions = "1"
truc_runtime = { git = "https://github.com/arnodb/truc.git" }

[build-dependencies]
datapet = { path = "../../datapet" }
datapet_codegen = { path = "../../datapet_codegen" }
getset = "0.1"
quote = "1"
truc = { git = "https://github.com/arnodb/truc.git" }
