[package]
name = "datapet_example_index_first_char"
version = "0.1.0"
edition = "2021"
rust-version = "1.65.0"

[dependencies]
datapet_support = { path = "../../datapet_support" }
fallible-iterator = "0.2"
itertools = "0.10"
serde = "1"
static_assertions = "1"
truc_runtime = { git = "https://github.com/arnodb/truc.git" }

# dtpt_monitor
chrono = { version = "0.4", optional = true }
self-meter = { version = "0.6", optional = true }
tracking-allocator = { version = "0.4", optional = true }

[features]
default = []
dtpt_monitor = ["chrono", "self-meter", "tracking-allocator"]

[build-dependencies]
datapet = { path = "../../datapet" }
datapet_lang = { path = "../../datapet_lang" }
getset = "0.1"
handlebars = "4"
quote = "1"
serde = { version = "1", features = ["derive"] }
truc = { git = "https://github.com/arnodb/truc.git" }
