[package]
name = "datapet_example_tree"
version = "0.1.0"
edition = "2021"
rust-version = "1.65.0"

[dependencies]
datapet_support = { path = "../../datapet_support" }
fallible-iterator = "0.2"
serde = "1"
static_assertions = "1"
truc_runtime = { git = "https://github.com/arnodb/truc.git" }
walkdir = "2"

[build-dependencies]
datapet = { path = "../../datapet" }
datapet_lang = { path = "../../datapet_lang" }
handlebars = "4"
serde = { version = "1", features = ["derive"] }
truc = { git = "https://github.com/arnodb/truc.git" }
