[package]
name = "datapet_example_wordlist"
version = "0.1.0"
edition = "2021"
rust-version = "1.65.0"

[dependencies]
datapet_support = { path = "../../datapet_support" }
fallible-iterator = "0.2"
static_assertions = "1"
truc_runtime = { git = "https://github.com/arnodb/truc.git" }

[build-dependencies]
datapet = { path = "../../datapet" }
datapet_codegen = { path = "../../datapet_codegen" }
datapet_support = { path = "../../datapet_support" }
handlebars = "4"
serde = { version = "1", features = ["derive"] }
truc = { git = "https://github.com/arnodb/truc.git" }
