[package]
name = "quirky_binder_example_index_first_char"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"

[dependencies]
anyhow = "1"
fallible-iterator = "0.3"
itertools = "0.13"
quirky_binder_capnp = { path = "../../capnp/quirky_binder_capnp" }
quirky_binder_support = { path = "../../quirky_binder_support" }
serde = "1"
static_assertions = "1"
truc_runtime = "0.4"

# quirky_binder_monitor
chrono = { version = "0.4", optional = true }
self-meter = { version = "0.6", optional = true }
tracking-allocator = { version = "0.4", optional = true }

[features]
default = []
quirky_binder_monitor = ["chrono", "self-meter", "tracking-allocator"]

[build-dependencies]
getset = "0.1"
quirky_binder = { path = "../../quirky_binder" }
quote = "1"
truc = "0.4"
