[package]
name = "datapet_tests"
version = "0.1.0"
edition = "2021"
rust-version = "1.65.0"

[dependencies]
datapet_support = { path = "../../datapet_support" }
fallible-iterator = "0.2"
static_assertions = "1"
truc_runtime = { git = "https://github.com/arnodb/truc.git" }

[build-dependencies]
datapet_tests_source = { path = "../datapet_tests_source" }
