[package]
name = "datapet_tests_source"
version = "0.1.0"
edition = "2021"
rust-version = "1.65.0"

[dependencies]
datapet = { path = "../../datapet" }
datapet_lang = { path = "../../datapet_lang" }
handlebars = "4"
serde = { version = "1", features = ["derive"] }
truc = { git = "https://github.com/arnodb/truc.git" }
