[package]
name = "quirky_binder_tests"
version = "0.1.0"
edition = "2021"
rust-version = "1.65.0"

[dependencies]
csv = "1"
fallible-iterator = "0.2"
more-asserts = "0.3"
quirky_binder_support = { path = "../../quirky_binder_support" }
rand = "0.8"
rand_chacha = "0.3"
serde = "1"
static_assertions = "1"
truc_runtime = { git = "https://github.com/arnodb/truc.git" }

[build-dependencies]
quirky_binder_tests_source = { path = "../quirky_binder_tests_source" }
