[package]
name = "quirky_binder_tests"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"

[dependencies]
anyhow = "1"
fallible-iterator = "0.3"
more-asserts = "0.3"
quirky_binder_support = { path = "../../quirky_binder_support" }
rand = "0.8"
rand_chacha = "0.3"
serde = "1"
static_assertions = "1"
truc_runtime = "0.3"

[build-dependencies]
quirky_binder = { path = "../../quirky_binder" }
truc = "0.3"
