[package]
name = "quirky_binder_tests_csv"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"

[dependencies]
anyhow = "1"
csv = "1"
fallible-iterator = "0.3"
quirky_binder_support = { path = "../../quirky_binder_support" }
serde = "1"
static_assertions = "1"
truc_runtime = "0.4"

[dev-dependencies]
pretty_assertions = "1"

[build-dependencies]
quirky_binder = { path = "../../quirky_binder" }
quirky_binder_csv = { path = "../../contrib/quirky_binder_csv" }
truc = "0.4"
