[package]
name = "quirky_binder_tests_git2"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"

[dependencies]
anyhow = "1"
fallible-iterator = "0.3"
git2 = "0.20"
quirky_binder_support = { path = "../../quirky_binder_support" }
serde = "1"
static_assertions = "1"
truc_runtime = "0.4"

[dev-dependencies]
pretty_assertions = "1"

[build-dependencies]
quirky_binder = { path = "../../quirky_binder" }
quirky_binder_git2 = { path = "../../contrib/quirky_binder_git2" }
truc = "0.4"
