[package]
name = "quirky_binder_tests_source"
version = "0.1.0"
edition = "2021"
rust-version = "1.65.0"

[dependencies]
handlebars = "4"
quirky_binder = { path = "../../quirky_binder" }
quirky_binder_lang = { path = "../../quirky_binder_lang" }
serde = { version = "1", features = ["derive"] }
truc = "0.2"
